compiler/testData/diagnostics/tests/overload/noConflictingOverloadsWithDeprecated/ConflictingOverloadsFunsDifferentReturnInPackage.kt
package qwertyuiop

<!CONFLICTING_OVERLOADS!>fun c(s: String)<!> {
}

<!CONFLICTING_OVERLOADS!>@Deprecated("c", level = DeprecationLevel.HIDDEN)
fun c(s: String)<!> {
}
